kubernetes/apps/networking/static-sites/omni/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omni
  namespace: networking
spec:
  type: ExternalName
  externalName: 10.0.10.205
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
