kubernetes/apps/networking/static-sites/omni/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni
  namespace: networking
spec:
  ingressClassName: internal
  rules:
    - host: omni.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omni
                port:
                  number: 80
